--- a/product.html
+++ b/product.html
@@ -19,7 +19,7 @@
         <img src="img/index-logo.svg" width="368" height="153" alt="Логотип барбершопа «БОРОДИНСКИЙ»">
       </a>
       <!-- <div class="main-navigator-wrapper"></div> -->
-          <ul class="sitenavigation">
+          <ul class="site-navigation">
             <li><a href="blank.html">Информация</a></li>
             <li><a href="blank.html">Новости</a></li>
             <li><a href="price.html">Прайс-лист</a></li>
@@ -37,9 +37,15 @@
       <h1 class="page-title">Нaбор для путешествий «Baxter of California»</h1>
 
         <ul class="breadcrumbs">
-          <li><a href="index.html"></a>Главная</li>
-          <li><a href="catalog.html"></a>Магазин</li>
-          <li><a href="catalog.html"></a>Средства для ухода</li>
+          <li>
+            <a href="index.html">Главная</a>
+          </li>
+          <li>
+            <a href="catalog.html">Магазин</a>
+          </li>
+          <li>
+            <a href="catalog.html">Средства для ухода</a>
+          </li>
           <li>Нaбор для путешествий «Baxter of California»</li>
         </ul>
         <div class="catalog-columns">
