--- a/catalog.html
+++ b/catalog.html
@@ -124,7 +124,7 @@
                   <span class="product-manufacture">«Baxter of California»</span>
                 </h3>
                 <p>
-                  <img src="/img/catalog-item-1.jpg"  alt="Набор для путешествий «Baxter of California»" width="220" height="165">
+                  <img src="img/catalog-item-1.jpg"  alt="Набор для путешествий «Baxter of California»" width="220" height="165">
                 </p>
               </a>
               <p class="catalog-item-price">
@@ -139,7 +139,7 @@
                   <span class="product-manufacture">«Baxter of California»</span>
                 </h3>
                 <p>
-                  <img src="/img/catalog-item-2.jpg" alt="Увлажняющий кондиционер «Baxter of California»" width="220" height="165">
+                  <img src="img/catalog-item-2.jpg" alt="Увлажняющий кондиционер «Baxter of California»" width="220" height="165">
                 </p>
               </a>
               <p class="catalog-item-price">
@@ -154,7 +154,7 @@
                   <span class="product-manufacture">«Suavecito»</span>
                 </h3>
                 <p>
-                  <img src="/img/catalog-item-3.jpg" alt="Гель для волос «Suavecito»" width="220" height="165">
+                  <img src="img/catalog-item-3.jpg" alt="Гель для волос «Suavecito»" width="220" height="165">
                 </p>
               </a>
               <p class="catalog-item-price">
@@ -169,7 +169,7 @@
                   <span class="product-manufacture">«American Crew»</span>
                 </h3>
                 <p>
-                  <img src="/img/catalog-item-4.jpg" alt="Глина для укладки волос «American Crew»" width="220" height="165">
+                  <img src="img/catalog-item-4.jpg" alt="Глина для укладки волос «American Crew»" width="220" height="165">
                 </p>
               </a>
               <p class="catalog-item-price">
@@ -184,7 +184,7 @@
                   <span class="product-manufacture">«American crew»</span>
                 </h3>
                 <p>
-                  <img src="/img/catalog-item-5.jpg" alt="Гель для волос «American Crew»" width="220" height="165">
+                  <img src="img/catalog-item-5.jpg" alt="Гель для волос «American Crew»" width="220" height="165">
                 </p>
               </a>
               <p class="catalog-item-price">
@@ -199,7 +199,7 @@
                   <span class="product-manufacture">«Baxter of California»</span>
                 </h3>
                 <p>
-                  <img src="/img/catalog-item-6.jpg" alt="Набор для бритья «Baxter of California»" width="220" height="165">
+                  <img src="img/catalog-item-6.jpg" alt="Набор для бритья «Baxter of California»" width="220" height="165">
                 </p>
               </a>
               <p class="catalog-item-price">
