--- a/price.html
+++ b/price.html
@@ -22,11 +22,11 @@
       </a>
       <!-- <div class="main-navigator-wrapper"></div> -->
           <ul class="site-navigation">
-            <li><a href="blank.html">Информация</a></li>
-            <li><a href="blank.html">Новости</a></li>
+            <li><a href="#">Информация</a></li>
+            <li><a href="#">Новости</a></li>
             <li class="site-navigation-current"><a href="price.html">Прайс-лист</a></li>
             <li><a href="catalog.html">Магазин</a></li>
-            <li><a href="blank.html">Контакты</a></li>
+            <li><a href="#">Контакты</a></li>
           </ul>
           <div class="user-navigator">
             <a class="login-link" href="blank.html">Вход</a>
