--- a/catalog.html
+++ b/catalog.html
@@ -21,10 +21,10 @@
         <!-- <div class="container"> -->
           <ul class="site-navigation">
             <li><a href="index.html">Информация</a></li>
-            <li><a href="blank.html">Новости</a></li>
+            <li><a href="#">Новости</a></li>
             <li><a href="price.html">Прайс-лист</a></li>
             <li class="site-navigation-current"><a href="catalog.html">Магазин</a></li>
-            <li><a href="blank.html">Контакты</a></li>
+            <li><a href="#">Контакты</a></li>
           </ul>
           <div class="user-navigator">
             <a class="login-link" href="blank.html">Вход</a>
@@ -113,7 +113,6 @@
                 <button class="button"  type="submit">Показать</button>
             </form>
           </section>
-
           <section class="catalog">
           <h2 class="visually-hidden">Список средства для ухода</h2>
           <ul class="catalog-list">
