--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
  <!-- <div class="main-navigator-wrapper"></div> -->
         <div class="container">
           <ul class="site-navigation">
-            <li><a href="blank.html">Информация</a></li>
-            <li><a href="blank.html">Новости</a></li>
+            <li><a href="#">Информация</a></li>
+            <li><a href="#l">Новости</a></li>
             <li><a href="price.html">Прайс-лист</a></li>
             <li><a href="catalog.html">Магазин</a></li>
-            <li><a href="blank.html">Контакты</a></li>
+            <li><a href="#">Контакты</a></li>
           </ul>
           <div class="user-navigator">
             <a class="login-link" href="login.html">Вход</a>
