--- a/index.html
+++ b/index.html
@@ -122,19 +122,19 @@
     </p>
     <!-- Здесь будет форма записи -->
     <form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
-      <p class="appointment-item">
+      <p class="appointment-form-item">
         <label for="appointment-date">Дата</label>
         <input id="appointment-date" type="text" name="date" placeholder="01.01.2021">
       </p>
-      <p class="appointment-item">
+      <p class="appointment-form-item">
         <label for="appointment-time">Время</label>
         <input id="appointment-time" type="text" name="time" placeholder="10:10">
       </p>
-      <p class="appointment-item">
+      <p class="appointment-form-item">
         <label for="appointment-name">Ваше имя</label>
         <input id="appointment-name" type="text" name="name" placeholder="Борода">
       </p>
-      <p class="appointment-item">
+      <p class="appointment-form-item">
         <label for="appointment-phone">Телефон</label>
         <input id="appointment-phone" type="tel" name="phone" placeholder="+7 000 000-00-00">
       </p>
